fix(match2): line break on R6 match summary

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -809,12 +809,14 @@ div.brkts-popup-body-element-thumbs {
 	font-size: 85%;
 }
 
-.brkts-popup-body-match-sidewins-overtime,
 .brkts-popup-body-match-sidewins {
 	padding: 0 0 3px 3px;
 	line-height: 11px;
 	width: 10px;
+}
 
+.brkts-popup-body-match-sidewins-icon {
+	width: 24px;
 	& img {
 		[ data-darkreader-scheme="dark" ] &,
 		.theme--dark & {
